--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                            <input id="phoneQuantity" type="text" class="form-control text-center" value="1">
                            <button id="increasePhone" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$ <span id="phonePrice">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="subTotal">1278</span></h5>
                         <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="total">1278</span> </h5>
                      </div>
                   </div>
                </div>
@@ -83,22 +83,90 @@
 
       // decrease Phone Quantity
       const decreasePhone = document.getElementById("decreasePhone");
+
+      //decrease click handler
       decreasePhone.addEventListener("click", () => {
+         //Quantity decreasing
          const phoneQuantity = document.getElementById("phoneQuantity").value;
-         const phoneQuantityNumber = parseInt(phoneQuantity);
-         const presentQuantity = phoneQuantityNumber - 1;
-         if (presentQuantity >= 0) {
+         if (phoneQuantity > 0) {
+            const phoneQuantityNumber = parseInt(phoneQuantity);
+            const presentQuantity = phoneQuantityNumber - 1;
+
+            //Price setting with decreasing.
+            const perPhone = document.getElementById("phonePrice").innerText;
+            const perPhonePrice = parseInt(perPhone);
+            const priceOfPhone = 1219;
+            const currentPhonePrice = perPhonePrice - priceOfPhone;
+
+            //subtotal.
+            const subTotal = document.getElementById("subTotal");
+
+            //increasing subtotal.
+            const defaultSubTotal = subTotal.innerText;
+            const subTotalPrice = parseInt(defaultSubTotal);
+            const subTotalNumber = 1278;
+            const currentSubTotal = subTotalPrice - subTotalNumber;
+
+            //Total.
+            const total = document.getElementById("total");
+
+            //decreasing Total.
+            const defaultTotal = total.innerText;
+            const totalPrice = parseInt(defaultTotal);
+            const totalNumber = 1278;
+            const currentTotal = totalPrice - totalNumber;
+
+
+            //showing result
             const currentQuantity = document.getElementById("phoneQuantity").value = presentQuantity;
+            const totalPhonePrice = document.getElementById("phonePrice").innerText = currentPhonePrice;
+            const mainSubTotal = document.getElementById("subTotal").innerText = currentSubTotal;
+            const mainTotal = document.getElementById("total").innerText = currentTotal;
          }
+
       })
 
-      //Increase Phone Quantity.
+      //Increasing Phone Quantity.
       const increasePhone = document.getElementById("increasePhone");
+
+      //increase click handler
       increasePhone.addEventListener("click", () => {
+         //Quantity setting with increasing
          const phoneQuantity = document.getElementById("phoneQuantity").value;
-         const phoneQuantityNumber = parseInt(phoneQuantity);
-         const presentQuantity = phoneQuantityNumber + 1;
-         const currentQuantity = document.getElementById("phoneQuantity").value = presentQuantity;
+         if (phoneQuantity >= 0) {
+            const phoneQuantityNumber = parseInt(phoneQuantity);
+            const presentQuantity = phoneQuantityNumber + 1;
+
+            //Price setting with increasing.
+            const perPhone = document.getElementById("phonePrice").innerText;
+            let perPhonePrice = parseInt(perPhone);
+            const priceOfPhone = 1219;
+            const currentPhonePrice = perPhonePrice + priceOfPhone;
+
+            //subtotal.
+            const subTotal = document.getElementById("subTotal");
+
+            //increasing subtotal.
+            const defaultSubTotal = subTotal.innerText;
+            const subTotalPrice = parseInt(defaultSubTotal);
+            const subTotalNumber = 1278;
+            const currentSubTotal = subTotalNumber + subTotalPrice;
+
+            //Total.
+            const total = document.getElementById("total");
+
+            //increasing total.
+            const defaultTotal = total.innerText;
+            const totalPrice = parseInt(defaultTotal);
+            const totalNumber = 1278;
+            const currentTotal = totalNumber + totalPrice;
+
+            //showing result.
+            const totalPhonePrice = document.getElementById("phonePrice").innerText = currentPhonePrice;
+            const currentQuantity = document.getElementById("phoneQuantity").value = presentQuantity;
+            const mainSubTotal = document.getElementById("subTotal").innerText = currentSubTotal;
+            const mainTotal = document.getElementById("total").innerText = currentTotal;
+         }
       })
    </script>
 </body>
